create login component

--- a/ci-app/src/app/ui/header/header.component.html
+++ b/ci-app/src/app/ui/header/header.component.html
@@ -9,10 +9,10 @@
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="" target="_blank">
+      <a class="nav-item nav-link" href="">
         Login
       </a>
-      <a class="nav-item nav-link" href="" target="_blank">
+      <a class="nav-item nav-link" href="">
         Sign Up
       </a>
     </div>
