--- a/ci-app/src/app/ui/header/header.component.html
+++ b/ci-app/src/app/ui/header/header.component.html
@@ -15,6 +15,8 @@
       <a class="nav-item nav-link" href="">
         Sign Up
       </a>
+      <!-- <ci-user></ci-user> -->
     </div>
   </div>
+  <ci-login></ci-login>
 </nav>
