create submit method

--- a/ci-app/src/app/ui/user/user.component.html
+++ b/ci-app/src/app/ui/user/user.component.html
@@ -1,6 +1,6 @@
 <a href class="dropdown-toggle" data-toggle="dropdown">
 <img src="/assets/imgs/user.jpg" width="20px" height="20px" class="user-image" alt="User Image">
-<span class="hidden-xs">User Name Mock</span>
+<span class="hidden-xs" (click)="test()">User</span>
 </a>
 <ul class="dropdown-menu">
   <!-- User image -->
