--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -1,4 +1,5 @@
-<h1>It's work</h1>
+<!-- <h1>It's work</h1> -->
+<ci-user></ci-user>
 <!-- <div id="loginModal" class="modal fade">
   <div class="modal-dialog modal-login">
     <div class="modal-content">
