fix auth guard dependency

--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -1,55 +1,19 @@
-<!-- <h1>It's work</h1> -->
 <ci-user></ci-user>
-<!-- <div id="loginModal" class="modal fade">
+<div id="loginModal" class="modal fade">
   <div class="modal-dialog modal-login">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 ng-show="lCtrl.loginMode" class="modal-title">Login</h4>
-        <h4 ng-show="lCtrl.signupMode" class="modal-title">SignUp</h4>
-        <h4 ng-show="lCtrl.forgotMode" class="modal-title">Forgot Password</h4>
+        <h4" class="modal-title">Login</h4>
+        <h4 class="modal-title">SignUp</h4>
+        <h4 class="modal-title">Forgot Password</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       </div>
       <div class="modal-body">
-        <form>
-          <div ng-show="lCtrl.signupMode" class="input-group">
-            <span class="input-group-addon"><i class="fas fa-user"></i></i></span>
-            <input ng-model="lCtrl.user.name" type="text" class="form-control" placeholder="Name" required="required">
-          </div>
-          <div class="input-group">
-            <span class="input-group-addon"><i class="fas fa-envelope"></i></span>
-            <input ng-model="lCtrl.user.email" type="text" class="form-control" placeholder="Email" required="required">
-          </div>
-          <div ng-show="lCtrl.signupMode || lCtrl.loginMode" class="input-group">
-            <span class="input-group-addon"><i class="fas fa-key"></i></span>
-            <input ng-model="lCtrl.user.password" type="password" class="form-control" placeholder="Password" required="required">
-          </div>
-          <div ng-show="lCtrl.signupMode" class="input-group">
-            <span class="input-group-addon"><i class="fas fa-key"></i></span>
-            <input ng-model="lCtrl.user.confirm_password" type="password" class="form-control" placeholder="Confirm Password" required="required">
-          </div>
-          <div id="btn-login" ng-show="lCtrl.loginMode" class="form-group">
-            <button type="button" class="btn-login btn-primary btn-block btn-lg" ng-click="lCtrl.login()">Login</button>
-          </div>
-          <div id="btn-signup" ng-show="lCtrl.signupMode" class="form-group">
-            <button type="button" class="signup-btn btn-primary btn-block btn-lg" ng-click="lCtrl.signup()">SignUp</button>
-          </div>
-          <div id="btn-forgot" ng-show="lCtrl.forgotMode" class="form-group">
-            <button type="button" class="forgot-btn btn-primary btn-block btn-lg" ng-click="lCtrl.forgot()">Forgot Password</button>
-          </div>
-        </form>
+
       </div>
       <div class="modal-footer">
-        <div>
-          <a href="#" ng-click="lCtrl.showSignUp()" ng-show="lCtrl.loginMode">Register here!</a>
-        </div>
-        <div>
-          <a href="#" ng-click="lCtrl.showForgot()" ng-show="lCtrl.loginMode">Forgot Password?</a>
-        </div>
-        <a href="#" ng-click="lCtrl.showLogin()" ng-show="lCtrl.signupMode">
-        Are you already registered? Login here!</a>
-        <a href="#" ng-click="lCtrl.showLogin()" ng-show="lCtrl.forgotMode">Back to login</a>
-      </div>
+
     </div>
   </div>
 </div>
- -->
+
