--- a/ci-app/src/app/ui/header/header.component.html
+++ b/ci-app/src/app/ui/header/header.component.html
@@ -9,14 +9,15 @@
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="">
+      <!-- <a class="nav-item nav-link" href="">
         Login
       </a>
       <a class="nav-item nav-link" href="">
         Sign Up
-      </a>
+      </a> -->
       <!-- <ci-user></ci-user> -->
+      <ci-login></ci-login>
+      <ci-user></ci-user>
     </div>
   </div>
-  <ci-login></ci-login>
 </nav>
