add bootstrap and fontawesome

--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -5,7 +5,7 @@
   Sign Up
 </a>
 
-<ng-template #content let-modal>
+<!-- <ng-template #content let-modal>
   <div class="modal-header">
     <h4 class="modal-title">Login</h4>
     <h4 class="modal-title">SignUp</h4>
@@ -54,7 +54,7 @@
     Are you already registered? Login here!</a>
     <a href="#" (click)="showLogin()" [hidden]="!forgotMode">Back to login</a>
   </div>
-</ng-template>
+</ng-template> -->
 
 <!-- <div class="modal-footer">
   <button type="button" class="btn btn-outline-dark" (click)="modal.close()">Save</button>
