--- a/ci-app/src/app/ui/modal/modal.component.html
+++ b/ci-app/src/app/ui/modal/modal.component.html
@@ -1,3 +1,6 @@
-<p>
-  modal works!
-</p>
+<div class="ci-modal">
+  <div class="ci-modal-body">
+      <ng-content></ng-content>
+  </div>
+</div>
+<div class="ci-modal-background"></div>
