--- a/ci-app/src/app/ui/modal/modal.component.css
+++ b/ci-app/src/app/ui/modal/modal.component.css
@@ -29,7 +29,7 @@
   /* z-index must be below .ci-modal and above everything else  */
   z-index: 900;
 }
-body.ci-modal-open {
+/* body.ci-modal-open { */
   /* body overflow is hidden to hide main scrollbar when modal window is open */
-  overflow: hidden;
-}
+  /* overflow: hidden; */
+/* } */
