--- a/ci-app/src/app/ui/modal/modal.component.css
+++ b/ci-app/src/app/ui/modal/modal.component.css
@@ -11,10 +11,13 @@
   overflow: auto;
 }
 .ci-modal .ci-modal-body {
+  /*width: 350px;*/
+  text-align: center;
+  width: 25%;
   padding: 20px;
   background: #fff;
   /* margin exposes part of the modal background */
-  margin: 40px;
+  /*margin: 40px;*/
 }
 .ci-modal-background {
   /* modal background fixed across whole screen */
