center modal in the view

--- a/ci-app/src/app/ui/footer/footer.component.html
+++ b/ci-app/src/app/ui/footer/footer.component.html
@@ -4,10 +4,10 @@
   </div>
   <div class="navbar">
     <a class="nav-item nav-link" href="https://github.com/thiagoluiznunes" target="_blank">
-      <i class="fa fa-github"></i>
+      <i class="fab fa-github"></i>
     </a>
     <a class="nav-item nav-link" href="https://medium.com/@thiagoluiz.nunes" target="_blank">
-      <i class="fa fa-medium"></i>
+      <i class="fab fa-medium"></i>
     </a>
   </div>
 </nav>
