--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -10,26 +10,34 @@
     <h4 class="modal-title">Login</h4>
     <!-- <h4 class="modal-title">SignUp</h4>
     <h4 class="modal-title">Forgot Password</h4> -->
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
+    <button type="button" class="close" aria-label="Close" (click)="closeModal('ciLoginModal')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
     <form>
       <div class="input-group">
-        <span class="input-group-addon"><i class="fas fa-user"></i></span>
+        <span style="font-size: 2em; color: #9E9E9E;">
+          <i class="fas fa-user"></i>
+        </span>
         <input type="text" class="form-control" placeholder="Name" required="required">
       </div>
       <div class="input-group">
-        <span class="input-group-addon"><i class="fas fa-envelope"></i></span>
+        <span style="font-size: 2em; color: #9E9E9E;">
+          <i class="fas fa-envelope"></i>
+        </span>
         <input type="text" class="form-control" placeholder="Email" required="required">
       </div>
       <div class="input-group">
-        <span class="input-group-addon"><i class="fas fa-key"></i></span>
+        <span style="font-size: 2em; color: #9E9E9E;">
+          <i class="fas fa-key"></i>
+        </span>
         <input  type="password" class="form-control" placeholder="Password" required="required">
       </div>
       <div class="input-group">
-        <span class="input-group-addon"><i class="fas fa-key"></i></span>
+        <span style="font-size: 2em; color: #9E9E9E;">
+          <i class="fas fa-key"></i>
+        </span>
         <input type="password" class="form-control" placeholder="Confirm Password" required="required">
       </div>
       <div id="btn-login" class="form-group">
