change login and signup reference

--- a/ci-app/src/app/ui/header/header.component.html
+++ b/ci-app/src/app/ui/header/header.component.html
@@ -9,12 +9,12 @@
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
     <div class="navbar-nav">
-      <!-- <a class="nav-item nav-link" href="">
+      <a class="nav-item nav-link" (click)="openModal('ciLoginModal')">
         Login
       </a>
-      <a class="nav-item nav-link" href="">
+      <a class="nav-item nav-link" (click)="openModal('ciLoginModal')">
         Sign Up
-      </a> -->
+      </a>
       <!-- <ci-user></ci-user> -->
       <ci-login></ci-login>
       <ci-user></ci-user>
