--- a/ci-app/src/styles.css
+++ b/ci-app/src/styles.css
@@ -1,3 +1,4 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import "~ngx-toastr/toastr.css";
