add flex-box to header

--- a/ci-app/src/app/ui/header/header.component.html
+++ b/ci-app/src/app/ui/header/header.component.html
@@ -9,14 +9,14 @@
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" (click)="openModal('ciLoginModal')">
+      <!-- <a class="nav-item nav-link" (click)="openModal('ciLoginModal')">
         Login
       </a>
       <a class="nav-item nav-link" (click)="openModal('ciLoginModal')">
         Sign Up
-      </a>
+      </a> -->
       <!-- <ci-user></ci-user> -->
-      <ci-login></ci-login>
+      <ci-login id="ciLoginComponent"></ci-login>
       <ci-user></ci-user>
     </div>
   </div>
