--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -1,3 +1,9 @@
+<a class="nav-item nav-link" (click)="openModal('ciLoginModal')">
+  Login
+</a>
+<a class="nav-item nav-link" (click)="openModal('ciLoginModal')">
+  Sign Up
+</a>
 <ci-modal id="ciLoginModal">
   <div class="modal-header">
     <h4 class="modal-title">Login</h4>
