--- a/ci-app/src/app/ui/login/login.component.css
+++ b/ci-app/src/app/ui/login/login.component.css
@@ -37,11 +37,42 @@
 #ciLoginModal .form-control {
   height: auto;
   outline: none;
-  margin-left: 10px;
-  padding-left: 10px;
+  /* margin-left: 10px;
+  padding-left: 10px; */
+  min-height: 35px;
+
+  font-size: 15px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+
+  border-radius: 3px;
+  border: 1px solid #ccc;
+
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+
+  -webkit-transition: border-color ease-in-out .3s, -webkit-box-shadow ease-in-out .3s;
+  -o-transition: border-color ease-in-out .3s, box-shadow ease-in-out .3s;
+  transition: border-color ease-in-out .3s, box-shadow ease-in-out .3s;
 }
-#ciLoginModal .form-control:focus {
+#ciLoginModal .form-control-login:focus {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+}
+#ciLoginModal .form-control-signup:focus {
   border-color: #00ce81;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,206,129,.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,206,129,.6);
+}
+#ciLoginModal .form-control-forgot:focus {
+  border-color: #7E57C2;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(126,87,194,.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(126,87,194,.6);
 }
 #ciLoginModal .form-control, .btn {
   min-height: 40px;
