--- a/ci-app/src/app/ui/login/login.component.css
+++ b/ci-app/src/app/ui/login/login.component.css
@@ -2,11 +2,12 @@
   font-family: VarelaRound-Regular;
   src: url('/assets/fonts/VarelaRound-Regular.ttf')
 }
+.nav-item {
+  cursor:pointer;
+}
 #ciLoginModal {
   font-family: VarelaRound-Regular;
   color: #636363;
-  /*width: 200px;
-  height: 600px;*/
 }
 #ciLoginModal .modal-content {
   padding: 20px;
@@ -23,35 +24,50 @@
   font-size: 26px;
 }
 #ciLoginModal .input-group {
+  position: relative;
   margin-bottom: 10%;
+}
+#ciLoginModal .input-group span {
+  border-top-left-radius: 3.5px;
+  border-bottom-left-radius: 3.5px;
+  border: 1px solid #ccc;
+  border-right: 0px;
+
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  font-size: 14px;
+  line-height: 1.42857143;
+  background-color: #f5f5f5;
+  color: rgb(99, 99, 99);
+}
+#ciLoginModal .input-group i {
+  padding-top: 12px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+#ciLoginModal .input-group ::placeholder {
+  /*color:#ccc;*/
 }
 #ciLoginModal .input-group-addon {
   background-color: #F5F5F5;
 }
-#ciLoginModal  .form-group {
+#ciLoginModal .form-group {
   position: relative;
 }
 #ciLoginModal i {
-  font-size: 18px;
+  /*font-size: 18px;*/
 }
 #ciLoginModal .form-control {
-  height: auto;
-  outline: none;
-  /* margin-left: 10px;
-  padding-left: 10px; */
-  min-height: 35px;
-
-  font-size: 15px;
+  min-height: 40px;
+  padding-top: 6px;
+  padding-right: 12px;
+  padding-bottom: 6px;
+  font-size: 14px;
   line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-
   border-radius: 3px;
   border: 1px solid #ccc;
 
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-
   -webkit-transition: border-color ease-in-out .3s, -webkit-box-shadow ease-in-out .3s;
   -o-transition: border-color ease-in-out .3s, box-shadow ease-in-out .3s;
   transition: border-color ease-in-out .3s, box-shadow ease-in-out .3s;
@@ -74,7 +90,7 @@
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(126,87,194,.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(126,87,194,.6);
 }
-#ciLoginModal .form-control, .btn {
+#ciLoginModal .btn {
   min-height: 40px;
   border-radius: 3px;
 }
@@ -86,6 +102,7 @@
   position: absolute;
   top: -5px;
   right: -5px;
+  color: rgb(51,51,51);
 }
 #ciLoginModal .btn-login {
   background: #2196F3;
