--- a/ci-app/src/app/ui/modal/modal.component.css
+++ b/ci-app/src/app/ui/modal/modal.component.css
@@ -1,40 +1,27 @@
 .ci-modal {
-  /* modal container fixed across whole screen */
   text-align: center;
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  /* z-index must be higher than .ci-modal-background */
   z-index: 1000;
-  /* enables scrolling for tall modals */
   overflow: auto;
 }
 .ci-modal .ci-modal-body {
-  /*width: 350px;*/
   margin-top: 2%;
   display: inline-block;
-  width: 18%;
+  width: 350px;
   padding: 20px;
-  background: #fff;
-  /* margin exposes part of the modal background */
-  /*margin: 40px;*/
+  background: rgb(255, 255, 255);
 }
 .ci-modal-background {
-  /* modal background fixed across whole screen */
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  /* semi-transparent black  */
   background-color: #000;
-  opacity: 0.75;
-  /* z-index must be below .ci-modal and above everything else  */
+  opacity: 0.55;
   z-index: 900;
 }
-/* body.ci-modal-open { */
-  /* body overflow is hidden to hide main scrollbar when modal window is open */
-  /* overflow: hidden; */
-/* } */
