--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -1,7 +1,7 @@
-<a class="nav-item nav-link" (click)="openModal('ciLoginModal', 'login')">
+<a id="" class="ciLoginLink ciLogin" (click)="openModal('ciLoginModal', 'login')">
   Login
 </a>
-<a class="nav-item nav-link" (click)="openModal('ciLoginModal', 'signup')">
+<a id="" class="ciSingUpLink ciLogin" (click)="openModal('ciLoginModal', 'signup')">
   Sign Up
 </a>
 <ci-modal id="ciLoginModal">
