update navbar using flexbox

--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -1,9 +1,9 @@
-<a id="" class="ciLoginLink ciLogin" (click)="openModal('ciLoginModal', 'login')">
+<!-- <a id="" class="ciLoginLink ciLogin" (click)="openModal('ciLoginModal', 'login')">
   Login
 </a>
 <a id="" class="ciSingUpLink ciLogin" (click)="openModal('ciLoginModal', 'signup')">
   Sign Up
-</a>
+</a> -->
 <ci-modal id="ciLoginModal">
   <div class="modal-header">
     <h4 [hidden]="!loginMode" class="modal-title">Login</h4>
