--- a/ci-app/src/app/ui/header/header.component.css
+++ b/ci-app/src/app/ui/header/header.component.css
@@ -1,4 +1,81 @@
-#ciLoginComponent {
+/* #ciLoginComponent {
   display: flex;
   justify-content: space-between;
+} */
+@font-face {
+  font-family: VarelaRound-Regular;
+  src: url('/assets/fonts/VarelaRound-Regular.ttf')
+}
+.Navbar {
+  background-color: #fff;
+  display: flex;
+  padding: 16px;
+  font-family: sans-serif;
+  color: rgb(150, 150, 150);
+}
+.Navbar__Link {
+  padding-right: 8px;
+}
+.Navbar__Items {
+  display: flex;
+}
+.Navbar__Items--right {
+  margin-left:auto;
+}
+.Navbar__Link-toggle {
+  display: none;
+}
+@media only screen and (max-width: 768px) {
+  .Navbar__Items,
+  .Navbar {
+    flex-direction: column;
+  }
+.Navbar__Items {
+    display:none;
+  }
+.Navbar__Items--right {
+    margin-left:0;
+  }
+.Navbar__ToggleShow {
+    display: flex;
+  }
+.Navbar__Link-toggle {
+    align-self: flex-end;
+    display: initial;
+    position: absolute;
+    cursor: pointer;
+   }
+}
+
+.ciLogin {
+  cursor:pointer;
+  font-size: 15px;
+  font-family: VarelaRound-Regular;
+  color: rgb(115, 143, 147) !important;
+}
+.ciSingUpLink {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 18px;
+  padding-right: 18px;
+  transition: background-color ease-in-out .3s, border-color ease-in-out .3s, color ease-in-out .3s;
+}
+.ciSingUpLink:hover {
+  color: #fff !important;
+  background-color: #00ce81;
+  border-color: #00ce81;
+}
+.ciLoginLink {
+  color: rgb(115, 143, 147);
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 18px;
+  padding-right: 18px;
+  transition: ease-in-out .3s, border-color ease-in-out .3s, color ease-in-out .3s;
+}
+.ciLoginLink:hover {
+  color: #66afe9 !important;
+  border-color: #66afe9;
 }
