--- a/ci-app/src/app/ui/header/header.component.html
+++ b/ci-app/src/app/ui/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light mb-5">
+<!-- <nav class="navbar navbar-light bg-light mb-5">
   <a class="navbar-brand" href="/">CI Environment</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
@@ -10,42 +10,38 @@
   <div class="navbar-expand ml-auto navbar-nav">
     <div class="navbar-nav">
       <ci-login id="ciLoginComponent"></ci-login>
-      <!-- <ci-user></ci-user> -->
+      <ci-user></ci-user>
     </div>
   </div>
-</nav>
-
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <ci-login id="ciLoginComponent"></ci-login>
-      <ci-user></ci-user>
+</nav> -->
+<div class="Navbar">
+  <div class="Navbar__Link Navbar__Link-brand">
+    Website title
   </div>
-</nav>
- -->
+  <div (click)="onClickToggle()" class="Navbar__Link Navbar__Link-toggle">
+    <i class="fas fa-bars"></i>
+  </div>
+  <nav class="Navbar__Items">
+    <div class="Navbar__Link">
+      Longer Link
+    </div>
+    <div class="Navbar__Link">
+      Longer Link
+    </div>
+    <div class="Navbar__Link">
+      Link
+    </div>
+  </nav>
+  <nav class="Navbar__Items Navbar__Items--right">
+    <div class="Navbar__Link">
+      <a id="" class="ciLoginLink ciLogin" (click)="openModal('ciLoginModal', 'login')">
+        Login
+      </a>
+    </div>
+    <div class="Navbar__Link">
+      <a id="" class="ciSingUpLink ciLogin" (click)="openModal('ciLoginModal', 'signup')">
+        Sign Up
+      </a>
+    </div>
+  </nav>
+</div>
