--- a/ci-app/src/app/ui/header/header.component.css
+++ b/ci-app/src/app/ui/header/header.component.css
@@ -1,7 +1,3 @@
-/* #ciLoginComponent {
-  display: flex;
-  justify-content: space-between;
-} */
 @font-face {
   font-family: VarelaRound-Regular;
   src: url('/assets/fonts/VarelaRound-Regular.ttf')
@@ -23,7 +19,7 @@
   display: flex;
 }
 .Navbar__Items--right {
-  margin-left:auto;
+  margin-left: auto;
 }
 .Navbar__Link-toggle {
   display: none;
@@ -41,13 +37,20 @@
     flex-direction: column;
   }
   .Navbar__Items {
-    display:none;
+    visibility: hidden;
+    height: 0px;
+
+    transition: height ease-in-out .3s;
+    -webkit-transition:height ease-in-out .3s;
+    -moz-transition:height ease-in-out .3s;
+    -o-transition:height ease-in-out .3s;
   }
   .Navbar__Items--right {
     margin-left:0;
   }
   .Navbar__ToggleShow {
-    display: flex;
+    visibility: visible;
+    height: 60px;
   }
   .Navbar__Link-toggle {
     align-self: flex-end;
