fix login and signup request

--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="modal-body">
 
-    <!-- {{ user | json }} -->
+    {{ user | json }}
     <form #form="ngForm" novalidate>
       <div [hidden]="!signupMode" class="input-group">
         <span>
