--- a/ci-app/src/app/ui/header/header.component.css
+++ b/ci-app/src/app/ui/header/header.component.css
@@ -7,7 +7,7 @@
   display: flex;
   padding: 10px;
   font-size: 15px;
-  font-family: sans-serif;
+  font-family: VarelaRound-Regular;
   color: rgb(100, 100, 100);
 }
 .Navbar__Link {
