--- a/ci-app/src/app/ui/login/login.component.css
+++ b/ci-app/src/app/ui/login/login.component.css
@@ -3,6 +3,8 @@
   src: url('/assets/fonts/VarelaRound-Regular.ttf')
 }
 .ciLogin {
+  padding-top: 5px;
+  padding-bottom: 5px;
   display: inline-flex;
   cursor:pointer;
   font-size: 15px;
