--- a/ci-app/src/app/ui/login/login.component.html
+++ b/ci-app/src/app/ui/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="ciLogin">
-  <a id="" class="ciLoginLink" (click)="openModal('ciLoginModal', 'login')">
+  <a class="ciLoginLink" (click)="openModal('ciLoginModal', 'login')">
     Login
   </a>
-  <a id="" class="ciSingUpLink" (click)="openModal('ciLoginModal', 'signup')">
+  <a class="ciSingUpLink" (click)="openModal('ciLoginModal', 'signup')">
     Sign Up
   </a>
 </div>
@@ -18,7 +18,7 @@
   </div>
   <div class="modal-body">
 
-    {{ user | json }}
+    {{ getUser() | json }}
     <form #form="ngForm" novalidate>
       <div [hidden]="!signupMode" class="input-group">
         <span>
