--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -3,35 +3,35 @@
     <div clas="container">
       <div class="login-nav">
         <a routerLink="">
-          <img class="login-nav-logo" src="favicon.ico" alt="Angular Logo" />
+          <img class="login-nav-logo" src="../../../assets/imgs/logo.svg" alt="Angular Logo" />
         </a>
       </div>
     </div>
   </div>
   <div class="login-forms">
     <div class="container">
-      <h5 class="login-title">Login</h5>
+      <h5 class="login-title">Entrar</h5>
       <div class="login-group">
         <form #form="ngForm" novalidate>
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Email" required="required" name="name" [(ngModel)]="user.email"
-              [ngModelOptions]="{standalone: true}" (keyup.enter)="onKeydEnter($event)">
+              [ngModelOptions]="{standalone: true}">
           </div>
           <div class="input-group">
-            <input type="password" class="form-control" required="required" name="name" placeholder="Password" [(ngModel)]="user.password"
-              [ngModelOptions]="{standalone: true}" (keyup.enter)="onKeydEnter($event)">
+            <input type="password" class="form-control" required="required" name="name" placeholder="Senha" [(ngModel)]="user.password"
+              [ngModelOptions]="{standalone: true}">
           </div>
           <div class="form-group">
-            <button type="button" class="btn-login btn-primary btn-block btn-lg" (click)="login()">Login</button>
+            <button type="button" class="btn-login btn-primary btn-block btn-lg" (click)="login()">Confirmar</button>
           </div>
         </form>
         <p class="forgot-password">
-          <a routerLink="">Forgot your password?</a>
+          <a routerLink="">Esqueceu sua senha?</a>
         </p>
         <p class="register-account">
-          <a>Don't have an account?</a>
+          <a>Não possui uma conta?</a>
         </p>
-        <a routerLink="/signup" class="register-btn btn-login btn-primary btn-block btn-lg">Register here</a>
+        <a routerLink="/signup" class="register-btn btn-login btn-primary btn-block btn-lg">Registre-se aqui.</a>
       </div>
     </div>
   </div>
