--- a/src/app/modules/login/login.component.css
+++ b/src/app/modules/login/login.component.css
@@ -5,7 +5,7 @@
 .login-header {
   padding: 1.5em 2em 1.5em 2em;
   box-sizing: border-box;
-  border-bottom: 1px solid #E0E0E0;
+  background-color: #1c2d36;
 }
 .login-nav {
   /* display: flex;
@@ -29,13 +29,13 @@
   font-family: VarelaRound-Regular;
   /* background-image: linear-gradient(141deg, #000 0%, #304FFE 51%, #ddd 75%); */
   background-image: linear-gradient(to left, #1976d2, #115293);
-  padding: 2em .5em 2em .5em;
+  padding: .5em;
 }
 .login-forms .container {
-  width: 500px;
-  padding: 50px 85px 50px 85px;
+  width: 460px;
+  padding: 25px 75px 25px 75px;
   background-color: #fff;
-  border-radius: 2%;
+  border-radius: 8px;
 }
 .login-title {
   font-family: OpenSans-Bold;
