update signup css component

--- a/src/app/modules/login/login.component.css
+++ b/src/app/modules/login/login.component.css
@@ -27,13 +27,16 @@
 }
 .login-forms {
   font-family: VarelaRound-Regular;
+  /* height: 100%; */
   /* background-image: linear-gradient(141deg, #000 0%, #304FFE 51%, #ddd 75%); */
-  background-image: linear-gradient(to left, #1976d2, #115293);
+  /* background-image: linear-gradient(to left, #1976d2, #115293); */
+  background: #fff;
   padding: .5em;
 }
 .login-forms .container {
-  width: 460px;
-  padding: 25px 75px 25px 75px;
+  /* width: 460px; */
+  width: 500px;
+  padding: 25px 75px 40px 75px;
   background-color: #fff;
   border-radius: 8px;
 }
