--- a/src/app/modules/dashboard/sidebar/sidebar.component.html
+++ b/src/app/modules/dashboard/sidebar/sidebar.component.html
@@ -2,13 +2,13 @@
 <aside class="main-sidebar">
   <section class="sidebar">
     <ul class="sidebar-menu" data-widget="tree">
-      <li class="header">MAIN NAVIGATION</li>
+      <li class="header"></li>
       <li routerLinkActive="active">
         <a [routerLink]="['/dashboard/overview']">
-        <i class="fas fa-home"></i><span> Overview </span></a></li>
+        <i class="fas fa-home"></i><span> Painel </span></a></li>
       <li routerLinkActive="active">
         <a [routerLink]="['/dashboard/profile']">
-        <i class="fas fa-user-circle"></i><span> Profile </span></a>
+        <i class="fas fa-user-circle"></i><span> Perfil </span></a>
       </li>
     </ul>
   </section>
