--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -3,7 +3,7 @@
     <div clas="container">
       <div class="login-nav">
         <a routerLink="">
-          <img class="login-nav-logo" src="../../../assets/imgs/logo.svg" alt="Angular Logo" />
+          <img class="login-nav-logo" src="../../../assets/imgs/logo.svg" alt="CI logo" />
         </a>
       </div>
     </div>
