--- a/src/app/modules/dashboard/header/header.component.html
+++ b/src/app/modules/dashboard/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="skin-blue">
+<div class="skin-blue fixed-top">
   <header class="main-header">
     <a [routerLink]="['/']" class="logo">
       <span class="logo-mini">CI</span>
