--- a/src/app/modules/ui/header/header.component.html
+++ b/src/app/modules/ui/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar-boilerplate navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Ambiente CI</a>
+    <a class="navbar-brand" [routerLink]="['/']">Ambiente CI</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,18 +8,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link app-home-link">Início<span class="sr-only">(current)</span></a>
+          <a class="nav-link app-home-link" [routerLink]="['/main']">Início<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link app-contact-link" href="#">Contato<span class="sr-only">(current)</span></a>
+          <a class="nav-link app-contact-link" [routerLink]="['/contact']">Contato<span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <ul *ngIf="showMenu" class="navbar-nav navbar-right">
         <li class="nav-item active">
-          <a class="nav-link app-login-link" routerLink="/login">Entrar<span class="sr-only">(current)</span></a>
+          <a class="nav-link app-login-link" [routerLink]="['/login']">Entrar<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link app-singup-link" routerLink="/signup">Registrar<span class="sr-only">(current)</span></a>
+          <a class="nav-link app-singup-link" [routerLink]="['/signup']">Registrar<span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <ul *ngIf="!showMenu" class="nav navbar-nav">
