create main html schema

--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -1,3 +1,9 @@
-<p>
-  main works!
-</p>
+<div class="mainContainer">
+  <section class="mostRatedArticles">
+    <app-grid-article></app-grid-article>
+    <app-simple-article></app-simple-article>
+    <app-simple-article></app-simple-article>
+    <app-simple-article></app-simple-article>
+    <app-grid-article></app-grid-article>
+  </section>
+</div>
