add new fonts and create grid-article layout

--- a/src/app/modules/articles/grid-article/grid-article.component.html
+++ b/src/app/modules/articles/grid-article/grid-article.component.html
@@ -1,3 +1,31 @@
-<p>
-  grid-article works!
-</p>
+<div class="gridArticleContainer">
+  <a class="gridArticleBanner">
+    <img src="../../../../assets/imgs/test.jpeg">
+  </a>
+  <div class="gridArticleTexts">
+    <div class="gridArticleTitle">
+      <a>
+        <h1>What Makes a Map Good</h1>
+      </a>
+    </div>
+    <div class="gridArticleDescription">
+      <a>
+        <h2>The most useful maps distort what they depict and leave out tons of possible information</h2>
+      </a>
+    </div>
+    <div class="gridArticleInformation">
+      <div class="gridtArticleAuthor">
+        <a>
+          <h2>Thiago Luiz Full-stack developer</h2>
+        </a>
+      </div>
+      <div class="gridArticleStatus">
+        <span class="gridArticleDate">20 May</span>
+        <span class="gridArticleTime"> 13 min</span>
+        <span class="gridArticleIcon" style="color: #757575; font-size: .6rem;">
+          <i class="fas fa-star"></i>
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
